FoodBank/objects/Income__c.object
<CustomObject>
    <description>Family income information</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Monthly income</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IncomeSource__c</fullName>
        <label>Source of Income</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Income</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>